[package]
name = "random_quote"
version = "0.1.1"
edition = "2021"
authors = ["Pranjal Patel <pranjalpatel@duck.com>"]
description = "Pull a random quote from zenquotes.io"
repository = "https://github.com/Pranjal-Patel/random_quote"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["web-programming"]

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
